# Deep-Learning

hw1/: classification.ipynb  energy_efficiency_data.csv  pyproject.toml  readme.md  regression.ipynb  report.md
hw1/src/: layer.py  losses.py  model.py  utils.py
hw2/: cifar10.ipynb  mnist.ipynb  pyproject.toml
hw3/: environment.yml  rnn.ipynb  shakespeare_valid.txt
